static/style.css
body {
    margin: 0;
    padding: 0;
}

#header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    float: left;
    z-index: 2;
    background-color: white;
}

#logo {
    width: 300px;
    height: auto;
}

#header-table {
    margin: 0;
}

.collapse {

}

.collapse > #logo {
    width: 250px;
    -webkit-transition: width 1s
}

.table {
    table-layout: fixed;
}

#header, h2 {
    display: inline;
}

.table > thead > tr > th{
    text-align: center;
}


.container {
    width: 100%;
    top: 170px;
    position: relative;
    padding: 0;
}

.courseacr {
    color: darkslateblue;
}

.coursename {
    font-weight: normal;
}

.pointer {
    cursor: pointer;
}

.map {
    position: relative;
    width: 100%;
    height: 350px;
}

.nav-tabs > li {
    width: 50%;
    text-align: center;
}

.modal-well {
    width: 70px;
    height: 70px;
    background-color: #E6E4E0;
    line-height: 0.6;
    text-align: center;
}

.big-icon {
    font-size: 55px;
}

.course-details {
    margin: 2px 5px 5px 5px;
    padding: 8px 0px;
    display: inline-block;
}

.course-details-wrapper {
    width: 100%;
    padding: 0 25px;
}

.homepage-icon {
    font-size: 34px;
}

.homepage-text {
    font-size: 11px;
}

#result [class*="hidden-"] {
    display: none;
}

.course_title_bar {
    font-size: 17px;
    background: gainsboro;
}

.course_acr{
    color: darkslateblue;
}

.course_name {
    font-size: 11px;
    font-weight: bold;
    text-transform: uppercase;
}

.course_location {
    font-size: small;
}




.title_bar_icon{
    color: darkgray;
    height: 20px;
    width: 20px;
    z-index: 999;
}

.title_bar_icon:hover{
    color: dimgrey;
}



.pin{
    float: left;
}

.pinned{
    background: #AAD5F9;
}
.pinned .course_title_bar{
    background: white;
}

.pinned .course_title_bar .pin{
    visibility: visible;
    color: firebrick;
}



.x{
    float: right;
}




.course-box {
    text-align: center;
    line-height: 1.2;
    padding: 9px
}

#door {
    height: 18px;
}

@media screen and (max-width: 1000px) {
    table {
        width: 100%;
    }

    thead {
        display: none;
    }

    tr:nth-of-type(2n) {
        background-color: inherit;
    }

    tr td:first-child {
        background: #f0f0f0;
        font-weight: bold;
        font-size: 1.3em;
    }

    tbody td {
        display: block;
        text-align: center;
    }

    tbody td:before {
        content: attr(data-th);
        display: block;
        text-align: center;
    }

    .course-box {
        width: 200px;
        height: 140px;
        float: left;
        margin: 4px;
    }

    td{
        width: 100%;
        float: left;
    }
}

@media screen and (max-width: 600px) {
    .course-box {
        width: 100%;
        height: auto;
        float: none;
        margin: 10px 0;
    }

    .course_acr{
        font-size: 23px;
    }

    .course_name {
        font-size: 14px;
    }
    .course_location {
        font-size: 15px;
    }
}

